fix(PDS-1495): Header - removed gap between date and status indicator

--- a/packages/header/src/helperComponents/FinancialMenu/components/PopoverContent/components/Grant/styles.module.scss
+++ b/packages/header/src/helperComponents/FinancialMenu/components/PopoverContent/components/Grant/styles.module.scss
@@ -37,7 +37,6 @@
 
 .dateWrapper {
   display: flex;
-  gap: styles-tokens-element.$dimension-1m;
   align-items: center;
 }
 
